# poetry-unknown-metadata-test-v2

./: pyproject.toml
