[tool.poetry]
name = "guardrails-cli"
version = "0.1.0"
description = "CLI for LLM guardrails configuration"
authors = ["Ishaan Mehta <ishaan_mehta@gap.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
nemoguardrails = "^0.9"

[tool.poetry.scripts]
guardrails = "guardrails_cli.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
